--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "main": "firefly-name-select.js",
   "dependencies": {
+    "@aspen-elements/aspen-button": "^0.5.1",
+    "@aspen-elements/aspen-securable-mixin": "^0.5.1",
     "@polymer/app-storage": "^3.0.2",
     "@polymer/iron-demo-helpers": "^3.0.0",
     "@polymer/iron-icon": "^3.0.0",
