--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aspen-elements/aspen-list-icons": "^0.5.0",
     "@aspen-elements/aspen-securable-mixin": "^0.5.1",
     "@firefly-elements/firefly-list-mixin": "^0.5.0",
+    "@firefly-elements/polymerfire": "^0.5.0",
     "@polymer/app-storage": "^3.0.2",
     "@polymer/iron-demo-helpers": "^3.0.0",
     "@polymer/iron-icon": "^3.0.0",
