--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "description": "description goes here",
-  "name": "@polymer/firefly-name-select",
-  "version": "",
+  "name": "@firefly-elements/firefly-name-select",
   "resolutions": {
     "inherits": "2.0.3",
     "samsam": "1.1.3",
@@ -13,7 +12,7 @@
     "@aspen-elements/aspen-button": "^0.5.1",
     "@aspen-elements/aspen-list-icons": "^0.5.0",
     "@aspen-elements/aspen-securable-mixin": "^0.5.1",
-    "@firefly-elements/firefly-list-mixin": "^0.5.1",
+    "@firefly-elements/firefly-list-mixin": "^0.5.2",
     "@firefly-elements/polymerfire": "^0.5.12",
     "@polymer/app-storage": "^3.0.2",
     "@polymer/iron-demo-helpers": "^3.0.0",
@@ -29,5 +28,22 @@
   "devDependencies": {
     "wct-browser-legacy": "^1.0.1",
     "@webcomponents/webcomponentsjs": "^2.0.0"
-  }
+  },
+  "version": "0.5.2",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/firefly-project/firefly-name-select.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/firefly-project/firefly-name-select/issues"
+  },
+  "homepage": "https://github.com/firefly-project/firefly-name-select#readme"
 }
